cruft-ng (0.4.5) UNRELEASED; urgency=medium

  * Declare compliance with Policy 3.9.7
  * Enable full hardening

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Wed, 17 Feb 2016 10:49:01 +0100

cruft-ng (0.4.4) unstable; urgency=low

  * Add support for systems with UsrMerge

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sun, 17 Jan 2016 21:16:43 +0100

cruft-ng (0.4.3) unstable; urgency=low

  * don't report .pyc files if a .py file exist (Closes:  #366616)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Wed, 06 Jan 2016 21:51:45 +0100

cruft-ng (0.4.2) unstable; urgency=low

  * revert ignoring /srv, let admin handle this with their custom rules
  * take into account dpkg's path-exclude configuration (Closes: #619086)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Fri, 11 Dec 2015 13:04:38 +0100

cruft-ng (0.4.1) unstable; urgency=low

  * always ignore contents of /mnt & /srv
  * run on a single file (Closes: #432026), this is a very simple implementation
    that can be enhanced
  * depends on cruft-common instead of "cruft (<< 0.9.20) | cruft-common"

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Thu, 05 Nov 2015 23:52:51 +0100

cruft-ng (0.4) unstable; urgency=medium

  * Enable DEBUG all over the place
  * Print DEBUG info to stderr
  * process uppercase files in /etc/cruft/filters/ like original cruft
  * process script files in /etc/cruft/explain/ like original cruft

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Mon, 11 May 2015 16:50:37 +0200

cruft-ng (0.3) unstable; urgency=medium

  * Fix stack-smashing error, replace strcpy by strncpy (Closes: #783723)
  * Enable use of 'DEBUG' environment variable

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Mon, 04 May 2015 10:20:24 +0200

cruft-ng (0.2) unstable; urgency=medium

  * Fix license of mlocate_db.h in d/copyright
  * fail immediately if can't read mlocate's db
  * enable hardening
