@@ -2,6 +2,7 @@ cruft-ng (0.4.5) UNRELEASED; urgency=medium
 
   * Declare compliance with Policy 3.9.7
   * Enable full hardening
+  * Only refresh mlocate database when needed
 
  -- Alexandre Detiste <alexandre.detiste@gmail.com>  Wed, 17 Feb 2016 10:49:01 +0100
 
